--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,11 +18,6 @@ jobs:
 
     - name: Get dependencies
       run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-
+        go get ./...
     - name: Build
       run: go build -v .
